editor and file tree prototype
